Introducing thumbnail extraction cost